@@ -45,4 +45,5 @@
 - Improve priviledge checking
 
 # 20240511
-- View global admin TEST Draft
+- View global admin
+- View Channel Moderator TEST Draft
